changed jenkinfile and dockerfile