@@ -2,8 +2,25 @@ FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /build
 COPY . .
 RUN mvn clean package -DskipTests
-FROM eclipse-temurin:17-jre-alpine
+
+FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
+
 COPY --from=build /build/target/*.jar app.jar
-EXPOSE 8084
-ENTRYPOINT ["java","-jar","app.jar"]
+
+EXPOSE 8084 9010
+
+ENTRYPOINT ["java",
+  "-XX:+UseContainerSupport",
+  "-XX:MaxRAMPercentage=70",
+  "-XX:MetaspaceSize=128m",
+  "-XX:MaxMetaspaceSize=256m",
+  "-Xlog:gc*,metaspace",
+  "-Dcom.sun.management.jmxremote",
+  "-Dcom.sun.management.jmxremote.port=9010",
+  "-Dcom.sun.management.jmxremote.rmi.port=9010",
+  "-Dcom.sun.management.jmxremote.authenticate=false",
+  "-Dcom.sun.management.jmxremote.ssl=false",
+  "-Djava.rmi.server.hostname=localhost",
+  "-jar",
+  "app.jar"]
